# mcp-osx-py

./: README.md  pyproject.toml  requirements.txt
src/mcp_osx/: __init__.py  applescript.py  ax.py  elementfinder.py  fallback.py  main.py  serializewindowstructure.py
