[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-osx"
version = "0.1.0"
description = "MCP server for controlling macOS GUI applications via AppleScript, Accessibility API, and PyAutoGUI"
authors = [{name = "MCP OSX Team"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "macos", "gui", "automation", "accessibility", "applescript"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
]

dependencies = [
    "mcp",
    "atomacos",
    "pyautogui",
    "pyobjc-framework-quartz",
]

[project.scripts]
mcp-osx = "mcp_osx.main:main"

[project.urls]
Homepage = "https://github.com/your-username/mcp-osx-py"
Repository = "https://github.com/your-username/mcp-osx-py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
